# yastack

./: .gitignore  CMakeLists.txt  Contributing.md  NOTICE  README.md  azure-pipelines.yml
dpdk/: CMakeLists.txt
dpdk/config/: common_base
dpdk/drivers/net/ena/: ena_ethdev.c
dpdk/examples/ip_pipeline/config/: diagram-generator.py  pipeline-to-core-mapping.py
dpdk/examples/multi_process/symmetric_mp/: main.c
dpdk/mk/toolchain/gcc/: rte.vars.mk
ev/: CMakeIncludes.txt  CMakeLists.txt  CMakeSettings.txt  CMakeTestIncludes.txt  RAW_RELEASE_NOTES.md  ignored_commits.txt  last_5_commits.txt
ev/api/: CMakeLists.txt
ev/api/envoy/api/v2/core/: address.proto
ev/configs/: configgen.py  direct_response.yaml  example_configs.tar  google_com_proxy.v2.yaml  invoke_configgen.sh
ev/configs/out-dir/: example_configs.tar
ev/docs/: requirements.txt
ev/include/envoy/api/: api.h  os_sys_calls.h
ev/include/envoy/buffer/: buffer.h
ev/include/envoy/event/: dispatcher.h
ev/include/envoy/network/: address.h  listen_socket.h  transport_socket.h
ev/include/envoy/server/: listener_manager.h  options.h  worker.h
ev/perf/: perf_runs_with_vanilla_ev.txt
ev/source/common/api/: api_impl.cc  api_impl.h  os_sys_calls_impl.cc  os_sys_calls_impl.h
ev/source/common/buffer/: buffer_impl.cc  buffer_impl.h  watermark_buffer.cc  watermark_buffer.h
ev/source/common/common/: CMakeLists.txt  Makefile  assert.h  cmake_install.cmake  fmt.h  logger.h  version_linkstamp.cc  version_number.h  version_number.h.in
ev/source/common/event/: dispatched_thread.cc  dispatcher_impl.cc  dispatcher_impl.h  file_event_impl.cc  file_event_impl.h  timer_impl.cc
ev/source/common/filesystem/: watcher_impl.h
ev/source/common/network/: address_impl.cc  address_impl.h  connection_impl.cc  connection_impl.h  listen_socket_impl.cc  listen_socket_impl.h  listener_impl.cc  listener_impl.h  raw_buffer_socket.cc
ev/source/common/protobuf/: utility.h
ev/source/common/ratelimit/: ratelimit_impl.cc  ratelimit_impl.h
ev/source/common/router/: config_impl.cc  config_utility.cc  rds_impl.cc
ev/source/common/ssl/: CMakeLists.txt  context_impl.cc  ssl_socket.cc
ev/source/common/stats/: thread_local_store.cc
ev/source/common/thread_local/: thread_local_impl.cc
ev/source/common/upstream/: health_checker_impl.h
ev/source/exe/: CMakeLists.txt  main.cc  main_common.cc
ev/source/extensions/health_checkers/redis/: utility.h
ev/source/extensions/stat_sinks/hystrix/: hystrix.cc
ev/source/extensions/transport_sockets/alts/: noop_transport_socket_callbacks.h
ev/source/server/: configuration_impl.cc  lds_api.cc  listener_manager_impl.cc  listener_manager_impl.h  options_impl.cc  options_impl.h  server.cc  server.h  worker_impl.cc  worker_impl.h
ev/source/server/config_validation/: server.h
ev/source/server/http/: admin.cc
ev/test/: CMakeLists.txt  cp_cmd.txt  dummy_main.cc  files_replaced.txt  main.cc  test_runner.h
ev/test/common/event/: dispatched_thread_impl_test.cc.unused  dispatcher_impl_test.cc  file_event_impl_test.cc
ev/test/common/filesystem/: watcher_impl_test.cc
ev/test/common/http/: header_map_impl_fuzz.proto  header_map_impl_fuzz_test.cc
ev/test/common/http/http2/: codec_impl_fuzz_test.cc
ev/test/common/json/: config_schemas_test.cc
ev/test/common/network/: dns_impl_test.cc
ev/test/common/protobuf/: utility_test.cc
ev/test/common/ratelimit/: ratelimit_impl_test.cc
ev/test/common/router/: config_impl_test.cc  header_parser_fuzz_test.cc  rds_impl_test.cc  route_fuzz_test.cc
ev/test/common/runtime/: #filesystem_setup.sh#  runtime_impl_test.cc
ev/test/common/thread_local/: #thread_local_impl_test.cc#  thread_local_impl_test.cc
ev/test/exe/: main_common_test.cc
ev/test/extensions/access_loggers/http_grpc/: grpc_access_log_integration_test.cc
ev/test/extensions/stats_sinks/metrics_service/: metrics_service_integration_test.cc
ev/test/extensions/transport_sockets/alts/: noop_transport_socket_callbacks_test.cc
ev/test/fuzz/: fuzz_runner.h
ev/test/integration/: .server.cc.swp  ads_integration_test.cc  echo_integration_test.cc  eds_integration_test.cc  fake_upstream.cc  header_integration_test.cc  http2_integration_test.cc  http2_upstream_integration_test.cc  http_integration.cc  integration.cc  integration_admin_test.cc  integration_test.cc  legacy_json_integration_test.cc  load_stats_integration_test.cc  proxy_proto_integration_test.cc  ratelimit_integration_test.cc  server.cc  server.h  ssl_integration_test.cc  stats_integration_test.cc  tcp_proxy_integration_test.cc  uds_integration_test.cc  utility.cc  xds_integration_test.cc  xfcc_integration_test.cc
ev/test/mocks/api/: mocks.cc  mocks.h
ev/test/mocks/event/: mocks.h
ev/test/mocks/http/: mocks.h
ev/test/mocks/network/: mocks.h
ev/test/mocks/server/: CMakeLists.txt  mocks.h
ev/test/proto/: bookstore.pb.cc  bookstore.pb.h  helloworld.pb.cc  helloworld.pb.h
ev/test/server/: worker_impl_test.cc
ev/test/server/config_validation/: config_fuzz_test.cc  dispatcher_test.cc
ev/test/test_common/: network_utility_test.cc
fs/: CMakeLists.txt  README.md  env.sh  last_10_commits.txt  last_commit.txt
fs/app/libevent/: CMakeLists.txt  buffer.c  epoll.c  epoll_sub.c  event-internal.h  event.c  evmap.c  evthread_pthread.c  evutil.c  evutil_time.c  kqueue.c  last_5_commits.txt  listener.c  log.c  signal.c  util-internal.h
fs/app/libevent/include/event2/: buffer.h  event.h  listener.h  util.h
fs/app/libevent/sample/: echo-server.c  hello-world.c
fs/app/libevent/test/: regress_bufferevent.c
fs/config/: config.ini  config_1_core.ini  config_1_core_ena5.ini  config_2_core_ena5.ini  config_3_core_ena5.ini
fs/example/: Makefile  config.ini  main.c  main.c~
fs/freebsd/netinet/: in_pcb.c
fs/lib/: Makefile  ff_api.h  ff_config.c  ff_config.h  ff_dpdk_if.c  ff_dpdk_if.h  ff_dpdk_kni.c  ff_host_interface.c  ff_kern_synch.c  ff_syscall_wrapper.c  ff_veth.c
fs/tools/: Makefile  prog.mk
fs/tools/compat/: #ff_ipc.c#  ff_ipc.c
fs/tools/netstat/: nl_defs.h  nl_symbols.c
fs/tools/route/: keywords.h
(+54 files in other folders)
